sap-s4hana-soap/2.1/modules/ROOT/pages/sap-s4hana-soap-connector-reference.adoc
= SAP S/4HANA SOAP Connector 2.1 Reference
:page-aliases: connectors::sap/sap-s4hana-soap-connector-reference.adoc

Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Premium]

Anypoint Connector for SAP S/4HANA SOAP provides full support for the SOAP APIs exposed by SAP S/4HANA ERP and from version 2.1.x provides support also for SAP S/4HANA On-Premise ERP. 

The main class of an extension is the entry point from which configurations, connection providers, operations, and sources are declared.

== Configurations
---
[[Config]]
=== Config

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| * <<Config_BasicAuthentication, Basic Authentication>>
* <<Config_Oauth2ClientCredentialsAuthentication, Oauth2 Client Credentials Authentication>>
 | The connection types to provide to this configuration. | | x
 | Encoding a| String |  Character encoding used in the messaging. |  | 
| Connection timeout a| Number |  Connection timeout for the request |  30 |
| Connection Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use in the Timeout configurations |  `SECONDS` |
| Encoding a| String |  Default character encoding to use in all the messages. If not specified, the default charset in the mule configuration will be used |  |
| Name a| String |  The identifier of this element used to reference it in other components |  | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the instance expires at the exact moment that it becomes eligible. Mule purges the instances as appropriate. |  |
|===

=== Connection Types

[[Config_BasicAuthentication]]
==== Basic Authentication

Basic authentication is the simplest way of enforcing access controls because it does not require cookies, session identifiers, or login pages. Instead, it uses standard fields in the HTTP header, removing the need for handshakes. This mechanism provides no confidentiality protection for the transmitted credentials. They are merely encoded with Base64 in transit, but not encrypted or hashed in any way.

====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Service base URL a| String |  The base URL of the service on SAP S/4HANA to be accessed from the connector. |  | x
| Username a| String |  The account username with which to log in to SAP S/4HANA. |  | x
| Password a| String |  The account password with which to log in to SAP S/4HANA. |  | x
| Discovery Service Enabled a| Boolean |  Enables automatic service discovery |  true |
| Discovery Service Path a| String |  URL to use for automatic services discovery |  `/sap/bc/srt/wsil_ext` |
| Service directory a| String |  Common HTTP directory for all SAP services |   |
| Unlisted services a| Array of String |  List of services to add to the list of discovered services |  |
| Service discovery resolution timeout a| Number |  Connection timeout for service discovery |  `30` |
| Service Discovery Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use in the Timeout configuration |  `SECONDS` |
| Default HTTP headers a| Object | Default HTTP headers to include in the message. |  |
| Default query parameters a| Object | Default query parameters to include in the request. |  |
| Proxy configuration a| <<ProxyConfiguration>> |  Proxy configuration for the connector. |  |
| TLS configuration a| <<Tls>> |  Defines a configuration for TLS, which can be used from both the client and server sides to secure communication for the Mule app. When using the HTTPS protocol, the HTTP communication is secured using TLS or SSL. If HTTPS is configured as the protocol then the user needs to configure at least the keystore in the `tls:context` child element of the `listener-config`. | HTTP |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===

[[Config_Oauth2ClientCredentialsAuthentication]]
==== OAuth 2.0 Client Credentials Authentication

OAuth 2.0 authentication provides a secure way of authenticating against the resource using the provided client ID and client secret. Authentication is ensured using an access token generated by the resource. The generated token has a limited lifespan and is automatically refreshed by initiating a refresh dance, after the token expires.

====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Service base URL a| String |  The base URL of the SAP S/4HANA SOAP service to access from the connector |  | x
| Discovery Service Enabled a| Boolean | Enables automatic service discovery |  true |
| Discovery Service Path a| String | URL to use for automatic services discovery |  `/sap/bc/srt/wsil_ext` |
| Service directory a| String |  Common HTTP directory for all SAP services |   |
| Unlisted services a| Array of String a| List of services that will be added to the list of discovered services, for example: `/sap/bc/srt/wsdl_ext/flv_10002S111AD1/srvc_url/sap/bc/srt/scs_ext/sap/creditmanagementaccountbyidqu1` +
If the `Service directory` parameter is not specified, then the HTTP directory needs to be prepended before every service name in this list, in the following format: `{directory}/{service-name}`. |  |
| Service discovery resolution timeout a| Number | Connection timeout for service discovery |  30 |
| Service Discovery Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use in the Timeout configuration |  SECONDS |
| Default HTTP headers a| Object |  Default HTTP headers the message should include |  |
| Default query parameters a| Object |  Default Query parameters the request should include |  |
| Proxy configuration a| <<ProxyConfiguration>> | Proxy configuration for the connector |  |
| TLS configuration a| <<Tls>> |  Defines a configuration for TLS, which can be used from both the client and server sides to secure communication for the Mule app. When using the HTTPS protocol, the HTTP communication is secured using TLS or SSL. If HTTPS is configured as the protocol then the user needs to configure at least the keystore in the `tls:context` child element of the `listener-config`. | HTTP |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Client Id a| String | The OAuth client ID as registered with the service provider |  | x
| Client Secret a| String | The OAuth client secret as registered with the service provider |  | x
| Token Url a| String |  The service provider's token endpoint URL |  https://{host-name}/{oauth-service}/{generate-token-resource} |
| Scopes a| String |  The OAuth scopes requested during the dance. If not provided, it defaults to those in the annotation. |  |
| Object Store a| String |  A reference to the object store used to store each resource owner ID's data. If not specified, the default object store is automatically provisioned by Mule. |  |
|===

[[ListenerConfig]]
=== Listener Config

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | *x*
| Encoding a| String |  Default character encoding to use in all the messages. If not specified, the default charset in the Mule configuration is used. |  | 
| HTTP Listener a| String |  Reference to the global HTTP Listener that will be used to receive SOAP S/4HANA messages. |  | *x*
| WSDL Paths a| Array of <<WsdlPath>> |  Specify the locations of the WSDL definitions. |  | 
| Name a| String |  The identifier of this element; used by other components to reference it |  | *x*
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the instance expires at the exact moment that it becomes eligible. Mule purges the instances as appropriate. |  | 
|===

==== Associated Sources
* <<OutboundMessageListener>> 


== Supported Operations

* <<Invoke>>
* <<Unauthorize>>

[[Invoke]]
== Invoke
`<s4hana-soap:invoke>`

Consumes an operation from an S/4HANA SOAP Web Service.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use | | x
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component |  | x
| Service name a| String |  Name of the service |  | x
| Operation name a| String |  The operation name of the service |  | x
| Message a| Binary |  The content of the message. |  #[payload] |
| Connection timeout a| Number |  Connection timeout for the request |  |
| Connection Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use in the Timeout configurations |  |
| Custom HTTP headers a| Object |  Custom headers that the request will include. The headers specified here will be merged with the default headers specified in the configuration. |  |
| Custom query parameters a| Object | Custom query parameters that the request will include. The query parameters specified here will be merged with the default query parameters specified in the config. |  |
| Target Variable a| String |  The name of a variable in which to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |<<SoapOutputEnvelope>>
| Attributes Type a| <<SoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* S4HANA-SOAP:CONNECTIVITY
* S4HANA-SOAP:PROCESSING_ERROR
* S4HANA-SOAP:RETRY_EXHAUSTED

[[Unauthorize]]
== Unauthorize
`<s4hana-soap:unauthorize>`

Deletes all of the access token information of a given resource owner ID so that it's impossible to execute any operation for that user without repeating the authorization dance.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use | | x
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
|===

=== For Configurations

* <<Config>>

== Sources

[[OutboundMessageListener]]
== Outbound Message Listener
`<s4hana-soap:outbound-message-listener>`

Creates an input source that listens for incoming SAP S/4HANA SOAP outbound messages. 

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use | | *x*
| Path a| String |  Path where server listens for the outbound messages |  | *x*
| Allowed Methods a| String |  Comma-separated list of methods. Leave empty to allow all. |  GET, POST | 
| Message Type a| String |  The message type the source listens for |  | *x*
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | *x*
| Primary Node Only a| Boolean |  Whether this source should be executed only on the primary node when running in a cluster |  | 
| On Capacity Overload a| Enumeration, one of:

** WAIT
** FAIL
** DROP |  Strategy that the Mule applies when the flow receives more messages to process than it has the capacity for |  WAIT | 
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* <<non-repeatable-stream>> |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior.   |  | 
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message |  | 
| Body a| Binary |  |  | 
| Headers a| Object |  |  | 
| Status Code a| Number |  |  | 
| Reason Phrase a| String |  |  | 
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Any
| *Attributes Type* a| <<OutboundMessageAttributes>>
|===

=== For Configurations

* <<ListenerConfig>> 

== Types
[[ProxyConfiguration]]
=== Proxy Configuration

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Host a| String | Host where the proxy requests are sent |  | x
| Port a| Number | Port where the proxy requests are sent |  | x
| Username a| String | The username to authenticate against the proxy |  |
| Password a| String | The password to authenticate against the proxy |  |
| Non Proxy Hosts a| Array of String | A list of hosts against which the proxy should not be used |  |
| Ntlm Domain a| String | The domain to authenticate against the proxy |  |
|===

[[Tls]]
=== TLS

Defines a configuration for TLS, which can be used from both the client and server sides to secure communication for the Mule app. When using the HTTPS protocol, the HTTP communication is secured using TLS or SSL. If HTTPS is configured as the protocol then the user needs to configure at least the keystore in the `tls:context` child element of the `listener-config`.

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | A comma-separated list of protocols enabled for this context |  |
| Enabled Cipher Suites a| String | A comma-separated list of cipher suites enabled for this context |  |
| Trust Store a| <<TrustStore>> |  |  |
| Key Store a| <<KeyStore>> |  |  |
| Revocation Check a| * <<StandardRevocationCheck>>
* <<CustomOcspResponder>>
* <<CrlFile>> |  |  |
|===

[[TrustStore]]
=== Truststore

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which will be resolved relative to the current classpath and file system if possible) of the truststore |  |
| Password a| String | The password used to protect the truststore |  |
| Type a| String | The type of store used |  |
| Algorithm a| String | The algorithm used by the truststore |  |
| Insecure a| Boolean | If `true`, no certificate validations will be performed, rendering connections vulnerable to attacks. Use at your own risk. |  |
|===

[[KeyStore]]
=== Keystore

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which will be resolved relative to the current classpath and file system if possible) of the keystore. |  |
| Type a| String | The type of store used. |  |
| Alias a| String | When the keystore contains many private keys, this attribute indicates the alias of the key that should be used. If not defined, the first key in the file will be used by default. |  |
| Key Password a| String | The password used to protect the private key. |  |
| Password a| String | The password used to protect the keystore. |  |
| Algorithm a| String | The algorithm used by the keystore. |  |
|===

[[StandardRevocationCheck]]
=== Standard Revocation Check

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Only verify the last element of the certificate chain |  |
| Prefer Crls a| Boolean | Try CRL instead of OCSP first |  |
| No Fallback a| Boolean | Do not use the secondary checking method (the one not selected before) |  |
| Soft Fail a| Boolean | Avoid verification failure when the revocation server can not be reached or is busy |  |
|===

[[CustomOcspResponder]]
=== Custom OCSP Responder

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Url a| String | The URL of the OCSP responder |  |
| Cert Alias a| String | Alias of the signing certificate for the OCSP response (must be in the truststore) if present |  |
|===

[[CrlFile]]
=== CRL File

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The path to the CRL file |  |
|===

[[Reconnection]]
=== Reconnection

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | The reconnection strategy to use. |  |
|===

[[Reconnect]]
=== Reconnect

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect |  |
| Blocking a| Boolean | If `false`, the reconnection strategy will run in a separate, non-blocking thread |  |
| Count a| Number | How many reconnection attempts to make |  |
|===

[[ReconnectForever]]
=== Reconnect Forever

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect |  |
| Blocking a| Boolean | If `false`, the reconnection strategy will run in a separate, non-blocking thread |  |
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance can be idle before it's considered eligible for expiration |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute |  |
|===

[[SoapOutputEnvelope]]
=== SOAP Output Envelope

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Attachments a| Object |  |  |
| Body a| Binary |  |  |
| Headers a| Object |  |  |
|===

[[SoapAttributes]]
=== SOAP Attributes

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Transport Additional Data a| Object |  |  |
| Transport Headers a| Object |  |  |
|===

[[WsdlPath]]
=== WSDL Path

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Wsdl Path a| String | Location of the WSDL definition. |  | x
|===

[[OutboundMessageAttributes]]
=== Outbound Message Attributes

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Http Request Attributes a| <<HttpRequestAttributes>> |  |  | 
| Message Type a| String |  |  | 
| Soap Headers a| Object |  |  | 
|======================

[[HttpRequestAttributes]]
=== Http Request Attributes

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Client Certificate a| Any |  |  | 
| Http Headers a| Object |  |  | 
| Listener Path a| String |  |  | 
| Local Address a| String |  |  | 
| Method a| String |  |  | 
| Query Params a| Object |  |  | 
| Raw Request Uri a| String |  |  | 
| Remote Address a| String |  |  | 
| Scheme a| String |  |  | 
| Uri Params a| Object |  |  | 
| Version a| String |  |  | 
|======================

[[RepeatableInMemoryStream]]
=== Repeatable In Memory Stream

When streaming in this mode, Mule does not use the disk to buffer the contents. If you exceed the buffer size, the message fails.

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | The amount of memory to allocate to consume the stream and provide random access to it. If the stream contains more data than can fit into the specified buffer size, then the buffer is expanded according to the `bufferSizeIncrement` attribute, with an upper limit of what is specified for `maxInMemorySize`. |  | 
| Buffer Size Increment a| Number | This is how much the buffer size expands if it exceeds the amount specified for its initial size. Setting a value of zero or lower means that the buffer should not expand, and a `STREAM_MAXIMUM_SIZE_EXCEEDED` error is thrown when the buffer gets full. |  | 
| Max Buffer Size a| Number | This is the maximum amount of memory to use. If the specified maximum is exceeded, a `STREAM_MAXIMUM_SIZE_EXCEEDED` error is thrown. A value lower than or equal to zero means there is no limit on the buffer size. |  | 
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which all these buffer size attributes are expressed |  | 
|===

[[RepeatableFileStoreStream]]
=== Repeatable File Store Stream

File store repeatable streams require buffering. Mule keeps a portion of the stream contents in memory. If the stream contents are larger than the configured buffer size, Mule backs up the buffer’s content to disk and then clears the memory.

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| In Memory Size a| Number | Defines the maximum memory that the stream should use to keep data in memory. If more than that is consumed, then the contents start to buffer on the disk. |  | 
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed |  | 
|===

[non-repeatable-stream]
=== Non-repeatable Stream

In some cases, you may want to disable the repeatable stream functionality and use non-repeatable streams, which can have less performance overhead, memory use, and cost.

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Transactional Action a| Enumeration, one of:

** ALWAYS_JOIN
** JOIN_IF_POSSIBLE
** NOT_SUPPORTED |  The type of joining action that operations can take regarding transactions. |  `JOIN_IF_POSSIBLE` |
|===

[[RedeliveryPolicy]]
=== Redelivery Policy

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max Redelivery Count a| Number | The maximum number of times a message can be redelivered and processed unsuccessfully before triggering process-failed-message |  | 
| Message Digest Algorithm a| String | The secure hashing algorithm to use. If not set, the default is SHA-256. |  | 
| Message Identifier a| <<RedeliveryPolicyMessageIdentifier>> | Defines which strategy is used to identify the messages. |  | 
| Object Store a| ObjectStore | The object store where the redelivery counter for each message is going to be stored. |  | 
|===

[[RedeliveryPolicyMessageIdentifier]]
=== Redelivery Policy Message Identifier

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Use Secure Hash a| Boolean | Whether to use a secure hash algorithm to identify a redelivered message |  | 
| Id Expression a| String | Defines one or more expressions to use to determine when a message has been redelivered. This property may only be set if useSecureHash is false. |  | 
|===

== See Also


* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
